workloads/domains/location/base/service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: location-grpc
  namespace: location
  labels:
    app: location-grpc
spec:
  type: ClusterIP
  selector:
    app: location-grpc
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: grpc
